objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>L2I_VLS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VLS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_VendorRevSharePerc__c</fullName>
        <label>Vendor RevShare Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Warehouse__c</fullName>
        <label>Warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOT</fullName>
                </value>
                <value>
                    <fullName>GLO</fullName>
                </value>
                <value>
                    <fullName>IRV</fullName>
                </value>
                <value>
                    <fullName>BRP</fullName>
                </value>
                <value>
                    <fullName>LRP</fullName>
                </value>
                <value>
                    <fullName>DRP</fullName>
                </value>
                <value>
                    <fullName>SRP</fullName>
                </value>
                <value>
                    <fullName>DLR</fullName>
                </value>
                <value>
                    <fullName>TRP</fullName>
                </value>
                <value>
                    <fullName>DSP</fullName>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
                <value>
                    <fullName>COW</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>OST</fullName>
                </value>
                <value>
                    <fullName>RTN</fullName>
                </value>
                <value>
                    <fullName>OSA</fullName>
                </value>
                <value>
                    <fullName>ORP</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
                <value>
                    <fullName>PTS</fullName>
                </value>
                <value>
                    <fullName>DSO</fullName>
                </value>
                <value>
                    <fullName>BUY</fullName>
                </value>
                <value>
                    <fullName>SYR</fullName>
                </value>
                <value>
                    <fullName>DUB</fullName>
                </value>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>LON</fullName>
                </value>
                <value>
                    <fullName>LFR</fullName>
                </value>
                <value>
                    <fullName>PWS</fullName>
                </value>
                <value>
                    <fullName>PRC</fullName>
                </value>
                <value>
                    <fullName>NRP</fullName>
                </value>
                <value>
                    <fullName>ELF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_What_is_the_Release_Effort__c</fullName>
        <label>What is the Release Effort?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Separate Release (1)</fullName>
                </value>
                <value>
                    <fullName>Single Release (0)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_What_is_the_Test_Effort__c</fullName>
        <label>What is the Test Effort?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Major Spot Check (2)</fullName>
                </value>
                <value>
                    <fullName>Minor Spot Check (1)</fullName>
                </value>
                <value>
                    <fullName>No Test (0)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Who_is_Responsible__c</fullName>
        <label>Who is Responsible?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Panasonic (0)</fullName>
                </value>
                <value>
                    <fullName>Customer (1)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_blng_MatchingId__c</fullName>
        
        <externalId>true</externalId>
        <label>Matching ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Ext_Hold_Status__c</fullName>
        <label>Ext Hold Status</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_Ext_Order_Line_Status__c</fullName>
        <label>Ext Order Line Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_IntegrationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Line_External_Id__c</fullName>
        <label>Line External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Unit_Price__c</fullName>
        <formula>UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>